--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
         <script src="rpsconsole.js"></script>
     </head>
     <body>
-        <button type="button" class="rock">Rock</button>
-        <button type="button" class="papper">Paper</button>
-        <button type="button" class="scissor">Scissors</button>
-        <div class="scoreboard">
-            <div class="compScore"></div>
-            <div class="playerScore"></div>
+        <button type="button" id="rock">Rock</button>
+        <button type="button" id="papper">Paper</button>
+        <button type="button" id="scissor">Scissors</button>
+        <div id="scoreboard">
+            <div id="compScore"></div>
+            <div id="playerScore"></div>
         </div>
-        <button type="button" class="reset">Reset</button>
+        <button type="button" id="reset">Reset</button>
     </body>
 </html>
