moved script to end of body

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Rock Paper Scissors</title>
-        <script src="rpsconsole.js"></script>
+        <script src="stylesheet.css"></script>
     </head>
     <body>
-        
+        <button type="button" id="rock">Rock</button>
+        <button type="button" id="paper">Paper</button>
+        <button type="button" id="scissors">Scissors</button>
+        <script src="rpsconsole.js"></script>
     </body>
 </html>
