--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Rock Paper Scissors</title>
-        <script src="stylesheet.css"></script>
+        <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
         <button type="button" id="rock">Rock</button>
