--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
         <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
-        <button type="button" id="rock">Rock</button>
-        <button type="button" id="paper">Paper</button>
-        <button type="button" id="scissors">Scissors</button>
+        <div class="container">
+            <button type="button" id="rock" class="button">Rock</button>
+            <button type="button" id="paper" class="button">Paper</button>
+            <button type="button" id="scissors" class="button">Scissors</button>
+        </div>
+        
         <script src="rpsconsole.js"></script>
     </body>
 </html>
